# ERP_Avgust

./: .dev-pids  .env.example  .env.local.example  .gitignore  BRIEF.md  CLAUDE.md  QA_CHECKLIST.md  README.md  TASK.md  TASKS.md  dev-local.sh  dev-stop.sh  dev.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.lowram.override.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml
ismeta/backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
ismeta/backend/apps/agent/: admin.py  apps.py  checks.py  models.py  service.py  tools.py  urls.py  views.py
ismeta/backend/apps/agent/migrations/: 0001_create_chat_session_message.py
ismeta/backend/apps/agent/prompts/: system_v1.py
ismeta/backend/apps/agent/tests/: test_chat.py  test_checks.py  (+1 more)
ismeta/backend/apps/estimate/: admin.py  apps.py  import_views.py  matching_views.py  models.py  pdf_views.py  schemas.py  urls.py  views.py
ismeta/backend/apps/integration/: admin.py  apps.py  erp_client.py  models.py  recognition_client.py  types.py  urls.py  views.py  webhook_handlers.py
ismeta/backend/apps/llm/: admin.py  models.py  service.py  types.py
ismeta/backend/apps/recognition_jobs/: views.py
ismeta/backend/apps/workspace/: auth.py  filters.py  urls.py
ismeta/backend/ismeta/: settings.py  urls.py
recognition/: .env.example  .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt
recognition/app/: auth.py  config.py  logging_setup.py  main.py  middleware.py  pricing.json
recognition/app/api/: errors.py  health.py  parse.py
recognition/app/providers/: base.py  openai_vision.py
recognition/app/schemas/: invoice.py  probe.py  quote.py  spec.py
recognition/app/services/: _common.py  invoice_normalizer.py  invoice_parser.py  invoice_title_block.py  pdf_render.py  pdf_text.py  progress_emitter.py  spec_normalizer.py  spec_parser.py  spec_postprocess.py
recognition/tests/: conftest.py  test_auth.py  test_config_api_key.py  test_determinism.py  test_health.py  test_invoice_parser.py  test_normalize_llm.py  test_parse_invoice.py  test_parse_quote.py  test_parse_spec.py  test_pdf_text.py  test_probe.py  test_progress_emitter.py  test_spec_postprocess.py  test_xai_grok_provider.py
recognition/tests/golden/: test_invoice_01.py  test_invoice_02.py  test_spec_aov.py  test_spec_ov2.py  test_spec_tabs.py
(+1464 files in other folders)
