[project]
name = "recognition-service"
version = "0.1.0"
description = "ISMeta Recognition Service — PDF → structured items via LLM Vision."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI File(...)/Depends(...) in defaults is standard

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
