[project]
name = "ismeta-backend"
version = "0.1.0"
description = "ISMeta backend — Django 5 приложение для подготовки смет."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "DJ", "RUF"]
ignore = [
    "E501",    # длина строки обрабатывается форматером
    "RUF001",  # кириллица в строках — ок, русскоязычный проект
    "RUF002",  # кириллица в docstrings
    "RUF003",  # кириллица в комментариях
    "RUF012",  # mutable class defaults — false positive для Django Meta.ordering/constraints
]

[tool.ruff.lint.isort]
known-first-party = ["ismeta", "apps"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
exclude = ["migrations/", "tests/"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ismeta.settings"

[[tool.mypy.overrides]]
module = ["django.*", "rest_framework.*", "django_filters.*", "celery.*", "drf_spectacular.*", "decouple.*", "redis.*", "httpx.*", "pydantic.*", "rapidfuzz.*", "openpyxl.*", "openai.*", "google.*", "anthropic.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ismeta.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: медленные тесты (golden set, e2e)",
    "requires_llm: требует реального LLM-ключа",
    "requires_erp: требует запущенного ERP",
]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
precision = 1
skip_covered = false
fail_under = 70
